# bumprace

./: .gitignore  .hgignore  .hgignore.swp  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  README  bumprace.6  bumprace.sgml  configure  configure.ac
data/: Makefile.am  Makefile.in
data/gfx/: Makefile.am  Makefile.in
data/sound/: Makefile.am  Makefile.in
macosx/: bumprace.icns
macosx/English.lproj/: InfoPlist.strings
macosx/SDLMain.nib/: info.nib  objects.nib
macosx/bumprace.xcodeproj/: karl.mode1  karl.mode1v3  karl.pbxuser  project.pbxproj
src/: Makefile.am  Makefile.in  bumprace.c  bumprace.h  font.c  font.h  gfx.c  gfx.h  levels.h  levels2.h  menu.c  menu.h  net.c  net.h  options.c  options.h  particles.c  particles.h
