
gfxdir=$(datadir)/@PACKAGE@/gfx

gfx_DATA = \
1player.jpg      completed.png   racerc16.gif  racerd7.gif     racerf12.gif \
2playercomp.jpg  crashed.png     racerc17.gif  racerd8.gif     racerf13.gif \
2playerteam.jpg  explosion1.gif  racerc18.gif  racerd9.gif     racerf14.gif \
fore1.png        racerc2.gif     racerd_big.gif                racerf15.gif \
back2.jpg        fore11.gif      racerc3.gif   racere1.gif     racerf16.gif \
cannon1.jpg      fore12.gif      racerc4.gif   racere10.gif    racerf17.gif \
cannon10.jpg     fore13.gif      racerc5.gif   racere11.gif    racerf18.gif \
cannon11.jpg     fore14.gif      racerc6.gif   racere12.gif    racerf2.gif \
cannon12.jpg     fore15.gif      racerc7.gif   racere13.gif    racerf3.gif \
cannon13.jpg     fore16.gif      racerc8.gif   racere14.gif    racerf4.gif \
cannon14.jpg     fore2.png       racerc9.gif   racere15.gif    racerf5.gif \
cannon15.jpg     fore3.png       racerd1.gif   racere16.gif    racerf6.gif \
cannon16.jpg     fore4.png       racerd10.gif  racere17.gif    racerf7.gif \
cannon17.jpg     fore5.png       racerd11.gif  racere18.gif    racerf8.gif \
cannon18.jpg     fore6.png       racerd12.gif  racere2.gif     racerf9.gif \
cannon19.jpg     fore7.png       racerd13.gif  racere3.gif     racerf_big.gif \
cannon2.jpg      quit.jpg        racerd14.gif  racere4.gif     select.gif \
cannon20.jpg     racer_big.gif   racerd15.gif  racere5.gif     selectp1.jpg \
cannon21.jpg     racerb_big.gif  racerd16.gif  racere6.gif     selectp2.jpg \
cannon3.jpg      racerc1.gif     racerd17.gif  racere7.gif     star1.gif \
cannon4.jpg      racerc10.gif    racerd18.gif  racere8.gif     star2.gif \
cannon5.jpg      racerc11.gif    racerd2.gif   racere9.gif     star3.gif \
cannon6.jpg      racerc12.gif    racerd3.gif   racere_big.gif  star4.gif \
cannon7.jpg      racerc13.gif    racerd4.gif   racerf1.gif     star5.gif \
cannon8.jpg      racerc14.gif    racerd5.gif   racerf10.gif    timeout.png \
cannon9.jpg      racerc15.gif    racerd6.gif   racerf11.gif    title.gif \
font.png         highscore.png   fore8.png\
laser1.png  laser3.png  laser5.png  laser7.png  laser9.png \
laser2.png  laser4.png  laser6.png  laser8.png

EXTRA_DIST = $(gfx_DATA)
